# classification_cifar10

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cifar10_classification/: config.py  dataset.py  features.py  plots.py
cifar10_classification/modeling/: grid_search.py  predict.py  train.py
docs/: all_model_results.xlsx  mkdocs.yml  model_results_2best.xlsx  model_results_best.xlsx
docs/docs/: experiments.md  getting-started.md  index.md  result_best.ipynb
models/: models_hyperparameters.csv
notebooks/: Tuto_librairie.ipynb  best_model_show.ipynb  experimentation.ipynb  indépendance_feature.ipynb  initial_data_exploration.ipynb  model_results.xlsx  model_results2.xlsx  test_best_model.ipynb
