[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ML_\u0026_reconnaissance_de_forme"
version = "0.0.1"
description = "Classification of CIFAR-10 images using various algorithms"
authors = [
  { name = "Auren Moyo \u0026 Guillaume Charvolin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ML_&_reconnaissance_de_forme"]
force_sort_within_sections = true
