
#### `setup.cfg`
Configuration de base pour votre package Python.
```ini
[metadata]
name = cifar10_classification
version = 0.1.0
description = A CIFAR-10 image classification project

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    matplotlib
    seaborn
    scipy
    joblib
python_requires = >=3.7
